learning objs cls1

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -67,7 +67,7 @@ By the end of the chapter, readers will be able to do the following:
 - Compute, by hand, the straight-line (Euclidean) distance between points on a graph when there are two predictor variables.
 - Explain the $K$-nearest neighbor classification algorithm.
 - Perform $K$-nearest neighbor classification in R using `tidymodels`.
-- Use a `recipe` to preprocess data to be centered, scaled, and balanced.
+- Use a `recipe` to center, scale, balance, and impute data as a preprocessing step.
 - Combine preprocessing and model training using a `workflow`.
 
 
